# atelier

./: .env.example  .gitignore  FUTURE_IMPROVEMENTS.md  PLAN.md  README.md  non-ready-publish-attempt.json  package.json  render.yaml
apps/api/: pyproject.toml
apps/api/atelier_api/: config.py  jobs.py  keepwarm.py  layout.py  main.py  pricing.py
apps/api/atelier_api/db/: models.py  session.py
apps/api/atelier_api/llm/: client.py
apps/api/atelier_api/providers/: __init__.py  base.py  claude.py  genspark.py  minimax.py
apps/api/atelier_api/routes/: critics.py  diff.py  feedback.py  fork.py  media.py  merge.py  nodes.py  projects.py  settings_route.py
apps/api/atelier_api/sandbox/: fetcher.py  mutator.py
apps/api/atelier_api/storage/: __init__.py  base.py  local.py  supabase.py
apps/api/tests/: conftest.py  test_diff.py  test_health.py  test_projects.py
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/lib/: api.ts  (+3 more)
demo-video/: README.md  devfolio-submission.md  final-plan.md  package-lock.json  package.json
demo-video/scripts/: capture.mjs  compose.sh  narrate-local.ps1  narrate.mjs  narration.md
docs/cover-source/: README.md  cover.html
mcp-server/: Makefile  README.md  pyproject.toml  run.sh  smoke_diff.py  smoke_test.py
mcp-server/mcp_server/: __init__.py  __main__.py  client.py  diff.py  server.py
sandbox-server/: package.json  server.js
scripts/: dev-clean.sh  dev.sh  smoke_extract_design.py
(+32 files in other folders)
